--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
-  "name": "buildTool",
-  "version": "0.0.1",
-  "amd": {},
-  "devDependencies": {
-    "uglify-js": "~2.4.15",
-    "uglifycss": "0.0.9",
-    "node-static": "~0.7.3",
-    "cheerio": "~0.17.0",
-    "node-json-minify": "~0.1.3",
-    "minimize": "~0.7.7",
-    "audiosprite": "~0.3.3"
-  }
+    "name": "buildtool",
+    "description": "my self made, home grown, build pipeline, nothing fancy or special you know...",
+    "version": "0.0.1",
+    "amd": {},
+    "repository": {
+        "type": "git",
+        "url": "git://raphaelstary@bitbucket.org/letsplayIO/crappy-space-shooter.git"
+    },
+    "devDependencies": {
+        "uglify-js": "~2.4.15",
+        "uglifycss": "0.0.9",
+        "node-static": "~0.7.3",
+        "cheerio": "~0.17.0",
+        "node-json-minify": "~0.1.3",
+        "minimize": "~0.7.7",
+        "audiosprite": "~0.3.3"
+    }
 }
