--- a/tools/package.json
+++ b/tools/package.json
@@ -13,7 +13,6 @@
         "node-static": "~0.7.3",
         "cheerio": "~0.17.0",
         "node-json-minify": "0.1.3-a",
-        "minimize": "~0.7.7",
-        "audiosprite": "~0.3.3"
+        "minimize": "~0.7.7"
     }
 }
