--- a/tools/package.json
+++ b/tools/package.json
@@ -14,5 +14,8 @@
         "cheerio": "~0.17.0",
         "node-json-minify": "0.1.3-a",
         "minimize": "~0.7.7"
+    },
+    "dependencies": {
+        "fs-extra": "^1.0.0"
     }
 }
