ignore also atlas files which are platform specific like atlas-[platform] #core
(cherry picked from commit 2b546db)

--- a/.gitignore
+++ b/.gitignore
@@ -48,9 +48,11 @@ www-ghdeploy
 node_modules
 www/sandbox*
 www/gfx/test*
-atlas_*.png
-atlas_*.json
+www/audio
+atlas*.png
+atlas*.json
 audio.json
 audio.mp3
 audio.ogg
 scenes.json
+levels.json
