--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "gen:html": "node tool/generateHtml.js",
     "concat": "node tool/concatenate.js",
     "minify": "uglifyjs dist/highfive.js > dist/h5-min.js",
-    "build": "npm run clean && npm run init && npm run gen:html && npm run concat && npm run minify"
+    "build": "npm run clean && npm run init && npm run gen:html && npm run concat && npm run minify",
+    "prepublish": "npm run build",
+    "postpublish": "npm run clean"
   }
 }
