--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "highfive.js",
-  "version": "0.17.0-SNAPSHOT",
+  "version": "0.17.0",
   "description": "html5/js game framework",
   "main": "example/helloworld/main.js",
   "directories": {
