--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "highfive.js",
   "version": "0.17.1",
-  "description": "html5/js game framework",
+  "description": "html5/js game engine",
   "main": "example/helloworld/main.js",
   "directories": {
     "dist": "dist",
@@ -18,6 +18,7 @@
     "html5",
     "js",
     "game",
+    "engine",
     "framework"
   ],
   "author": "Raphael Stary",
