--- a/package.json
+++ b/package.json
@@ -28,19 +28,15 @@
   },
   "homepage": "https://github.com/raphaelstary/highfive.js",
   "devDependencies": {
-    "uglify-js": "^2.8.17",
+    "uglify-js": "^3.1.8",
     "http-server": "^0.10.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "node tool/clean.js",
-    "init": "node --eval \"fs.mkdirSync('dist');\"",
-    "gen:html": "node tool/generateHtml.js",
-    "concat": "node tool/concatenate.js",
-    "minify": "uglifyjs dist/highfive.js > dist/h5-min.js",
-    "build": "npm run clean && npm run init && npm run gen:html && npm run concat && npm run minify",
-    "prepublish": "npm run build",
-    "postpublish": "npm run clean",
+    "build": "node tool/clean.js && node tool/build.js",
+    "prepublishOnly": "npm run build",
+    "postpublish": "node tool/clean.js",
     "postversion": "git push && git push --tags",
     "start": "http-server -o example/helloworld/index.html"
   }
