--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "homepage": "https://github.com/raphaelstary/highfive.js",
   "devDependencies": {
     "uglify-js": "^3.1.8",
+    "eslint": "^4.17.0",
     "http-server": "^0.10.0"
   },
   "scripts": {
@@ -38,6 +39,7 @@
     "prepublishOnly": "rm -rf dist/ && mkdir dist/ && node tool/build.js",
     "postpublish": "rm -rf dist/",
     "postversion": "git push && git push --tags",
-    "start": "http-server -o example/helloworld/index.html"
+    "start": "http-server -o example/helloworld/index.html",
+    "lint": "eslint src/"
   }
 }
